[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/DeleteArea.gd" type="Script" id=1]
[ext_resource path="res://Models/floor2.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Scripts/Ring.gd" type="Script" id=3]
[ext_resource path="res://Materials/rainbowrot.jpg" type="Texture" id=4]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 3.0041, 13.1706, 5.02068 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 107.268, 14.9913, 113.641 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 5.90749, 2.09837, 9.87547 )

[node name="Ring" type="StaticBody"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0017767, 0.342871, 0.00694215 )
material_override = SubResource( 1 )
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 0.226, 0, 0, 0, 2, 0, 0.338103, 0.00896597 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]
input_ray_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -47.0676, 0 )
shape = SubResource( 3 )

[node name="Score" type="Area" parent="."]
input_ray_pickable = false
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Score"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.47905, -0.106762 )
shape = SubResource( 4 )

[connection signal="input_event" from="." to="." method="_on_Ring_input_event"]
[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Score" to="Score" method="_on_Score_body_entered"]
[connection signal="body_exited" from="Score" to="Score" method="_on_Score_body_exited"]
[connection signal="update_array" from="Score" to="." method="_on_Score_update_array"]
